@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.example.legalparser'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.legalparser"
         minSdk 24
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.2'
     }
 }
 
@@ -53,4 +59,32 @@ dependencies {
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+
+    // AzNavRail
+    implementation 'com.github.HereLiesAz:AzNavRail:1.9'
+
+    // Jetpack Compose
+    def compose_bom_version = "2024.02.01"
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation "androidx.compose.ui:ui-viewbinding:1.6.2"
+}
+
+kapt {
+    arguments {
+        arg("kapt.jvm.args", "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED " +
+                            "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+    }
 }
